crates/nash-parse/src/snapshots/nash_parse__type___tests__mixed_type_names.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\noption 'a -> 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                name: "option",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: Var(
                "a",
            ),
        },
    },
}
