crates/nash-parse/src/snapshots/nash_parse__type___tests__named_type_qualified_little.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nTypes.point"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: TypeQual {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        module: "Types",
        name: "point",
        args: [],
    },
}
