crates/nash-parse/src/snapshots/nash_parse__type___tests__parenthesized_function.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n('a -> 'b) -> List 'a -> List 'b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 33,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            },
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 15,
                },
                end: Position {
                    line: 1,
                    column: 33,
                },
            },
            value: Lambda {
                from: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 15,
                        },
                        end: Position {
                            line: 1,
                            column: 22,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                        name: "List",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 20,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 22,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
                to: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 26,
                        },
                        end: Position {
                            line: 1,
                            column: 33,
                        },
                    },
                    value: Type {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 26,
                            },
                            end: Position {
                                line: 1,
                                column: 30,
                            },
                        },
                        name: "List",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 33,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    },
}
